--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "author": "",
   "license": "ISC",
   "nodemonConfig": {
-    "watch": ["src"],
     "ignore": ["node_modules"],
+    "ext": "ts",
     "exec": "node -r tsconfig-paths/register -r ts-node/register"
   },
   "dependencies": {
